Resolved defect #698860 where mouse hovered over the product "View Details" button, it would expand container on IE10

--- a/webroot/skin/frontend/blueacorn/mis/css/madisonisland-ie8.css
+++ b/webroot/skin/frontend/blueacorn/mis/css/madisonisland-ie8.css
@@ -76,7 +76,8 @@
     padding: 20px 20px 82px;
     float: left;
     border: 1px solid #E1E1E1;
-    text-align: center; }
+    text-align: center;
+    height: 100%; }
     .feature-wrap .feature-item:first-child {
       margin-left: 0; }
     .feature-wrap .feature-item img {
