--- a/webroot/skin/frontend/blueacorn/mis/css/madisonisland.css
+++ b/webroot/skin/frontend/blueacorn/mis/css/madisonisland.css
@@ -106,7 +106,8 @@
     padding: 20px 20px 82px;
     float: left;
     border: 1px solid #E1E1E1;
-    text-align: center; }
+    text-align: center;
+    height: 100%; }
     @media only screen and (max-width: 950px) {
       .feature-wrap .feature-item {
         width: 49.15%;
