--- a/webroot/skin/frontend/blueacorn/mis/scss/content/_home.scss
+++ b/webroot/skin/frontend/blueacorn/mis/scss/content/_home.scss
@@ -139,6 +139,7 @@
         float: left;
         border: 1px solid #E1E1E1;
         text-align: center;
+        height: 100%;
 
         @include bp(max-width, 950px) {
             width: 49.15%;
